fix: border color transition not being that visible

--- a/src/app.css
+++ b/src/app.css
@@ -48,7 +48,7 @@
 		inset: 0;
 		border-radius: inherit;
 		border: var(--border);
-		background: linear-gradient(var(--color-surface-600), var(--color-surface-500)) border-box;
+		background: linear-gradient(var(--color-surface-500), var(--color-surface-700)) border-box;
 		mask:
 			linear-gradient(black, black) border-box,
 			linear-gradient(black, black) padding-box;
